--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^12.6.0",
     "firebase-admin": "^13.0.0",
+    "lucide-react": "^0.555.0",
     "next": "^14.2.5",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
